# filter_oberschulen_csv

./: Cargo.toml  README.md  combined.csv  test.ts
data/: schulen(1).csv  schulen(10).csv  schulen(12).csv  schulen(13).csv  schulen(14).csv  schulen(15).csv  schulen(16).csv  schulen(17).csv  schulen(2).csv  schulen(3).csv  schulen(4).csv  schulen(5).csv  schulen(6).csv  schulen(7).csv  schulen(8).csv  schulen(9).csv  schulen.csv
src/: api.rs  main.rs
