[package]
name = "school_filter_saxony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.2"
dialoguer = { version = "0.11.0", features = [
	"fuzzy-select",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.6", features = ["charset"] }
